--- a/xcms-preprocessing.org
+++ b/xcms-preprocessing.org
@@ -86,9 +86,9 @@ Below naming conventions and terms used throughout this document are listed:
 This workflow describes the basic data handling (I/O) of mass spectrometry data
 using the =MSnbase= package, and the LC/GC-MS data preprocessing using =xcms=. It
 showcases the new functionality and user interface functions of =xcms=, that
-re-use functionality from the =MSnbase= package. The first part of the workflow if
-focused on data import, access and visualization followed by a short description
-of a simple data centroiding approach and concluded by the =xcms=-based LC-MS data
+re-use functionality from the =MSnbase= package. The first part of the workflow is
+focused on data import, access and visualization followed the description of a
+simple data centroiding approach and concluded by the =xcms=-based LC-MS data
 preprocessing that comprises chromatographic peak detection, alignment and
 correspondence. The workflow does not cover data normalization procedures,
 compound identification and differential abundance analysis.
@@ -112,17 +112,19 @@ all packages for the analysis.
 ** Data import and representation
 
 Below we load all required libraries and read our toy data using the =readMSData=
-function. The data set consists of subsets of two files in mzML format, with
+function. This data set consists of two files in mzML format, with signals from
 pooled human serum samples measured with a ultra high performance liquid
 chromatography (UHPLC) system (Agilent 1290) coupled with a Q-TOF MS (TripleTOF
 5600+ AB Sciex). Chromatographic separation based on hydrophilic interaction
 liquid chromatography (HILIC). The system was tuned to allow measurement of the
-/polar metabolome/. We also define a =data.frame= describing the experiment and pass
-this to the =readMSData=. We thus have all experiment-related information within
-the same data object. The option =mode = "onDisk"= tells the function to read only
-general metadata into memory. The m/z and intensity values from the original
-files are not stored in memory, but retrieved from the original files on
-demand. This enables the analysis also of very large experiments.
+/polar metabolome/. To reduce file sizes, the data set was restricted to an m/z
+range from 105 to 134 and retention times from 0 to 260 seconds. We also define
+a =data.frame= describing the experiment and pass this to the =readMSData=
+function. We thus have all experiment-related information within the same data
+object. The option =mode = "onDisk"= tells the function to read only general
+metadata into memory. The m/z and intensity values from the original files are
+not kept in memory, but retrieved from the original files on demand. This
+enables analyses of very large experiments.
 
 #+NAME: load-data
 #+BEGIN_SRC R :ravel message = FALSE
@@ -156,10 +158,8 @@ will use this setup by default.
 #+END_SRC
 
 The experiment data is now represented as an =OnDiskMSnExp= object. Phenotype
-information can be retrieved with the =pData= function, or directly using =$=. As
-detailed above, only general information of each spectrum is stored in the
-object enabling analyses also of very large experiments. Below we access sample
-descriptions.
+information can be retrieved with the =pData= function, or directly using =$=. Below
+we access sample descriptions.
 
 #+NAME: show-pData
 #+BEGIN_SRC R :ravel message = FALSE
@@ -180,19 +180,18 @@ the =fData= function, that returns a =data.frame= with one row per spectrum.
 #+END_SRC
 
 Note that, since the data is not kept in memory, any data manipulations (such as
-spectrum smoothing) do not change the data, but are instead added to a lazy
-evaluation queue and applied to the data on the fly, each time m/z or intensity
-values are accessed.
+spectrum smoothing) do not actually change the data, but are applied to the data
+on the fly (i.e. each time m/z or intensity values are accessed).
 
 ** Basic data access and visualization
 
 The MS data in an =OnDiskMSnExp= object is organized by spectrum (similar as in
-/mzML/ files), with =Spectrum= objects used as containers for the respective m/z and
-intensity values. General spectrum information can be retrieved using the
-=msLevel=, =centroided=, =rtime= or =polarity= functions that return the respective
-value for all spectra from all files. Here, the =fromFile= function can be helpful
-to determine from which file/sample the respective spectrum information
-comes. This is shown in the code block below.
+/mzML/ files), with =Spectrum= objects used as containers for the m/z and intensity
+values. General spectrum information can be retrieved using the =msLevel=,
+=centroided=, =rtime= or =polarity= functions that return the respective value for all
+spectra from all files. Here, the =fromFile= function can be helpful to determine
+from which file/sample the information comes. This is shown in the code block
+below.
 
 #+NAME: general-access
 #+BEGIN_SRC R :ravel message = FALSE
@@ -212,12 +211,13 @@ files). This will load the full data from all raw files (eventually applying
 data manipulations stored in the lazy processing queue), which can take,
 depending on the size of the experiment, a relatively long time. In most cases
 we will however work anyway with sub-sets of the data, and retrieving such data
-can be, in the case of indexed mzML, mzXML and CDF files, very fast. Data
+can, in the case of indexed mzML, mzXML and CDF files, be very fast. Data
 objects can be easily subsetted using the filter functions: =filterFile=,
 =filterRtime=, =filterMz= or =filterMsLevel= that filter the data by file, retention
 time range, m/z range or MS level. To illustrate this we retrieve below all
 spectra measured between 180 and 181 seconds. Note that we use the pipe operator
-=%>%= from the =magrittr= package to avoid nested function calls.
+=%>%= from the =magrittr= package for better readability by avoiding nested function
+calls.
 
 #+NAME: spectra-filterRt
 #+BEGIN_SRC R :ravel message = FALSE
@@ -246,7 +246,7 @@ spectrum is.
   sapply(sps, fromFile)
 #+END_SRC
 
-We have thus 3 spectra per file. Below we plot the data from the last spectrum
+We have thus 3 spectra per file. Next we plot the data from the last spectrum
 (i.e. the 3rd spectrum in the present retention time window from the second
 file).
 
@@ -257,17 +257,17 @@ file).
 
 We can immediately spot several mass peaks in the spectrum, with the largest one
 at a m/z of about 130 and the second largest at about 106, which matches the
-expected mass to charge ratio for the [M+H]+ adduct of Serine. 
+expected mass to charge ratio for the [M+H]+ adduct of Serine.
 
 MS data is in general organized by spectrum, but in LC-MS experiments we analyze
-the data along the retention time axis and hence orthogonally to the data
-representation in a spectrum. We can use the =chromatogram= function to extract
-such data. The function aggregates intensities for each scan/retention time
-along the m/z axis (i.e. within each spectrum) and returns the retention time -
-intensity duplets in a =Chromatogram= object, one per file. The =Chromatogram=
-object supports, similar to the =Spectrum= object, the =rtime= and =intensity=
-functions to extract the respective information. Below we use the =chromatogram=
-function to extract the total ion chromatogram (TIC) for each file and plot it.
+the data along the retention time axis and hence orthogonally to this data
+representation. We can however use the =chromatogram= function to extract such
+data. The function aggregates intensities for each scan/retention time along the
+m/z axis (i.e. within each spectrum) and returns the retention time - intensity
+duplets in a =Chromatogram= object, one per file. The =Chromatogram= object
+supports, similar to the =Spectrum= object, the =rtime= and =intensity= functions to
+access the respective data. Below we use the =chromatogram= function to
+extract the total ion chromatogram (TIC) for each file and plot it.
 
 #+NAME: chromatogram-tic
 #+BEGIN_SRC R :ravel message = FALSE, fig.cap = "Total ion chromatogram.", fig.width = 10, fig.height = 5
@@ -290,7 +290,7 @@ intensities from the TIC of the first file.
   head(ints)
 #+END_SRC
 
-The object contains also the phenotype information from the original =data=
+The object contains also all phenotype information from the original =data=
 variable, that can be accessed similarly to the =OnDiskMSnExp= object (or most
 other data objects in Bioconductor).
 
@@ -303,8 +303,8 @@ other data objects in Bioconductor).
 Depending on the parameter =aggregationFun=, the function can produce total ion
 chromatograms (TIC), with =aggregationFun = "sum"= or base peak chromatograms
 (BPC) with =aggregationFun = "max"=. Below we extract and plot the ion
-chromatogram for Serine after first filtering the data object by retention time
-and by m/z.
+chromatogram for Serine after first filtering the data object to the retention
+time and by m/z ranges containing the signal for this compound.
 
 #+NAME: serine-xic
 #+BEGIN_SRC R :ravel message = FALSE, fig.cap = "Extracted ion chromatogram for the Serine [M+H]+ ion in both files."
@@ -323,19 +323,19 @@ MS instruments allow to export data in profile or centroid mode. Profile data
 contains the signal for all discrete m/z values (and retention times) for which
 the instrument collected data \cite{Smith:2014di}. For each ion at a given
 retention time the instrument measures thus multiple intensities, at m/z values
-that are distributed around the ion's m/z value. Centroiding is the process to
-reduce these mass peaks to a single representative signal, the centroid. =xcms=,
-specifically the /centWave/ chromatographic peak detection algorithm, was designed
-for centroided data, thus, prior to data analysis, profile data should be
-centroided. The =MSnbase= package provides the basic toolset to perform
-centroiding (and data smoothing): =pickPeaks= and =smooth=. 
+that are distributed around the ion's /real/ m/z value. Centroiding is the process
+to reduce these mass peaks to a single representative signal, the
+centroid. =xcms=, specifically the /centWave/ chromatographic peak detection
+algorithm, was designed for centroided data, thus, prior to data analysis,
+profile data should be centroided. The =MSnbase= package provides the basic
+toolset to perform centroiding (and data smoothing): =pickPeaks= and =smooth=.
 
 Below we inspect the profile data for the [M+H]+ ion adduct of Serine. We subset
 the data to the m/z and retention time range containing signal from Serine and
 =plot= the data with =type = "XIC"=, that generates a combined chromatographic and
 /map/ visualization of the data (i.e. a plot of the individual m/z, rt and
-intensity data tuples with the data points shown in the m/z - retention time
-space with intensity-dependent coloring).
+intensity data tuples with data points colored by their intensity in the m/z -
+retention time space).
 
 #+NAME: serine-profile-mode-data
 #+BEGIN_SRC R :ravel message = FALSE, fig.cap = "Profile data for Serine.", fig.width = 10, fig.height = 5, fig.pos = "h!", warning = FALSE
@@ -347,13 +347,13 @@ space with intensity-dependent coloring).
       plot(type = "XIC")
 #+END_SRC
 
-The plot shows all registered and exported data points from the instrument. The
-plot above clearly shows the mass peaks for Serine, that are represented by a
-distribution of signal in both retention time and m/z dimension.
+The plot shows all data points measured by the instrument. It clearly shows the
+mass peaks for Serine, that are represented by a distribution of signal in both
+retention time and m/z dimension.
 
-Next we first smooth the data per spectrum using a Savitzky-Golay filter, which
-usually improves data quality by reducing noise, followed by centroiding the
-data with a simple peak-picking strategy that reports the maximum signal for
+Next we first smooth the data in each spectrum using a Savitzky-Golay filter,
+which usually improves data quality by reducing noise, followed by centroiding
+the data with a simple peak-picking strategy that reports the maximum signal for
 each mass peak in each spectrum.
 
 #+NAME: centroiding
@@ -406,38 +406,29 @@ the centroided data as mzML files and read the exported data again.
 
 *** Chromatographic peak detection
 
-+ Aim: identify chromatographic peaks in the data.
-+ Function: =findChromPeaks=.
-+ Available methods:
-  - /matchedFilter/ (=MatchedFilterParam=) \cite{Smith:2006ic}.
-  - /centWave/ (=CentWaveParam=) \cite{Tautenhahn:2008fx}.
-  - /massifquant/ (=MassifquantParam=) \cite{Conley:2014ha}.
+Chromatographic peak detection aims to identify peaks along the retention time
+axis that represent the signal from individual compounds' ions. This can be
+performed with the =findChromPeaks= function that uses different algorithms
+depending on the submitted parameter object: with =MatchedFilterParam= it performs
+peak detection as described in the original xcms article
+\cite{Smith:2006ic}. With =CentWaveParam= a continuous wavelet
+transformation-based peak detection is performed that can detect close-by and
+partially overlapping peaks with different widths \cite{Tautenhahn:2008fx}. With
+=MassifquantParam= it performs a Kalman filter-based peak detection
+\cite{Conley:2014ha}. Additional peak detection algorithms for direct injection
+data are also available, but not discussed here. 
 
-+ CentWave is a two-step approach:
-1) identify regions of interest.
-
-#+BEGIN_EXPORT html
-![](images/centWave-ROI.png)
-#+END_EXPORT
-
-2) peak detection within this regions using continuous wavelet transform (CWT).
-
-#+BEGIN_EXPORT html
-![](images/centWave-CWT.png)
-#+END_EXPORT
-
-+ CentWave parameters:
-
-#+NAME: centwave-help
-#+BEGIN_SRC R :ravel results = "hide"
-  ?CentWaveParam
-#+END_SRC
-
-+ Crucial parameters: =peakwidth=, =ppm=.
-+ =peakwidth=: minimal and maximal expected peak width. Depends on the LC
-  settings of the experiment.
-+ Interactive code: extract chromatographic data for Serine and perform peak
-  detection using default parameters
+We use the /centWave/ algorithm that performs peak detection in two steps: first
+it identifies regions of interest in the m/z - retention time space and
+subsequently detects peaks in these regions using a continuous wavelet transform
+(see the original publication for more details). centWave can be configured with
+several parameters (see =?CentWaveParam=), with the most important ones being
+=peakwidth= and =ppm=. =peakwidth= defines the minimal and maximal expected width (in
+retention time dimension) of the peak and depends thus on the LC settings of the
+experiment. Appropriate values for this parameter can be defined by looking at
+extracted ion chromatograms of known compounds in the data. Below we extract 
+chromatographic data for Serine and perform a peak detection on the =Chromatogram=
+object using the default parameters for centWave.
 
 #+NAME: centWave-default
 #+BEGIN_SRC R :ravel message = FALSE, fig.cap = "XIC for Serine", results = "hide"
@@ -454,12 +445,22 @@ the centroided data as mzML files and read the exported data again.
 
   ## "dry-run" peak detection on the XIC.
   findChromPeaks(srn_chr, param = cwp)
+#+END_SRC
 
+The warning message tells us that centWave did not find any peaks in that
+chromatogram. Looking at the default values for the centWave parameters helps
+understanding why peak detection fails:
+
+#+NAME: centWave-default-parameters
+#+BEGIN_SRC R :ravel message = FALSE
   cwp
 #+END_SRC
 
-+ What went wrong? Default for =peakwidth= does not match the current data.
-+ Interactive code: change =peakwidth= and run again.
+The default settings for =peakwidth= are 20 to 50 seconds, while the
+chromatographic peak for Serine above is about 4 seconds wide. Below we adapt
+the settings to accommodate peaks ranging from 2 to 10 seconds and re-run the
+peak detection. In general, it is advisable to investigate peak widths for
+several ions in the data set to determine the /best/ settings for =peakwidth=.
 
 #+NAME: centWave-adapted
 #+BEGIN_SRC R :ravel message = FALSE, fig.cap = "XIC for Serine with detected chromatographic peak", results = "hide"
@@ -471,6 +472,13 @@ the centroided data as mzML files and read the exported data again.
   plot(srn_chr)
   rect(pks[, "rtmin"], 0, pks[, "rtmax"], pks[, "maxo"], border = "#00000040")
 #+END_SRC
+
+The next important setting is the =ppm= parameter, that is used in the initial
+step of centWave to identify regions of interest. In this step, regions are
+defined in which m/z values for an ion do not differ by more than =ppm= in
+consecutive spectra. This bases on the assumption that m/z values are more
+stable for larger signals. To illustrate this, we plot the full data for Serine.
+
 
 + Ideally check settings on more known compounds.
 + =ppm=: maximal allowed scattering of m/z values for one ion.
@@ -487,25 +495,24 @@ the centroided data as mzML files and read the exported data again.
   plot(srn, type = "XIC")
 #+END_SRC
 
-+ Interactive code: calculate the difference in m/z values between consecutive
-  scans.
+Indeed higher intensity signals tend to scatter less in m/z dimension. We next
+calculate for this data subset the difference in m/z values between consecutive
+scans.
 
 #+NAME: define-ppm
 #+BEGIN_SRC R :ravel message = FALSE
   ## Extract the Serine data for one file as a data.frame
   srn_df <- as(filterFile(srn, 1), "data.frame")
-  head(srn_df)
 
-  ## The difference between m/z values from consecutive scans
-  diff(srn_df$mz)
-
-  ## The same in ppm
+  ## The difference between m/z values from consecutive scans expressed
+  ## in ppm
   diff(srn_df$mz) * 1e6 / mean(srn_df$mz)
 #+END_SRC
 
-+ Ideally this should also be performed on more compounds.
-+ =ppm= should be large enough to capture the full chromatographic peak.
-+ Interactive code: perform chromatographic peak detection.
+The difference in m/z values for the Serine data is between 0 and 27
+ppm. Ideally this should be evaluated for several compounds and should be set to
+a value that allows to capture the full chromatographic peaks for most of the
+tested compounds. We can next perform the peak detection based on our settings.
 
 #+NAME: findPeaks-centWave
 #+BEGIN_SRC R :ravel message = FALSE
@@ -514,24 +521,31 @@ the centroided data as mzML files and read the exported data again.
   data_cent <- findChromPeaks(data_cent, param = cwp)
 #+END_SRC
 
-+ Result: =XCMSnExp= object extends the =OnDiskMSnExp=, so we can access the data in
-  the same way plus it stores preprocessing results.
-+ Interactive code: explore the result object.
+The result from the =findChromPeaks= call is an =XCMSnExp= object which contains all
+preprocessing results and, by extending the =OnDiskMSnExp= object, inherits all of
+the functionality described so far. The results from the peak detection analysis
+can be accessed with the =chromPeaks= function, that, with the optional =rt= and =mz=
+parameters, allows to extract identified chromatographic peaks from specific
+areas in the data.
 
 #+NAME: xcmsnexp
 #+BEGIN_SRC R :ravel message = FALSE, results = "hide"
-  data_cent
-
-  ## Access the peak detection results
-  head(chromPeaks(data_cent))
+  ## Access the peak detection results from a specific m/z - rt area
+  chromPeaks(data_cent, mz = c(106, 107), rt = c(150, 190))
 #+END_SRC
 
-+ For quality assessment, we could also do some summary statistics on the
-  identified peaks.
-+ Interactive code: plot the location of the identified peaks in the m/z - rt
-  plane.
+For each identified peak the m/z value of the apex is reported (column "mz"),
+the m/z range ("mzmin", "mzmax"), the retention time of the apex ("rt") and its
+range ("rtmin", "rtmax"), the integrated signal of the peak (i.e. the peak area
+"into"), the maximal signal of the peak ("maxo"), the signal to noise ratio
+("sn") and the index of the sample in which the peak was detected ("sample").
+For quality assessment we could now calculate summary statistics on the
+identified peaks to e.g. identify samples with much less detected peaks. Also,
+we can use the =plotChromPeaks= function to provide some general information on
+the location of the identified chromatographic peaks in the m/z - rt space.
+
 #+NAME: plotChromPeaks
-#+BEGIN_SRC R :ravel message = FALSE, fig.cap = "Location of the identified chromatographic peaks"
+#+BEGIN_SRC R :ravel message = FALSE, fig.cap = "Location of the identified chromatographic peaks in the m/z - rt space."
   par(mfrow = c(1, 2))
   plotChromPeaks(data_cent, 1)
   plotChromPeaks(data_cent, 2)
